# fold-license

./: Cargo.toml  LICENSE.md  README.md  test.json
examples/: example-conf.toml
examples/example.yarn/: package.json
src/: lib.rs  license_type.rs  main.rs
src/conf/: args.rs  mod.rs
src/converter/: licenses_to_output.rs  mod.rs  patterns_to_target_dirs.rs  target_dirs_to_licenses.rs
src/retriever/: cargo.rs  mod.rs  yarn.rs
