[package]
name = "fold-license"
authors = ["USAGI.NETWORK / Usagi Ito <the@usagi.network>"]
categories = ["rust-patterns"]
description = "Folding licenses from multiple dirs with `cargo`/Cargo.toml and `yarn`/package.json."
documentation = "https://docs.rs/fold-license/"
edition = "2021"
keywords = ["cli", "tool", "license", "cargo", "nodejs"]
license = "MIT"
repository = "https://github.com/usagi/fold-license"
version = "1.0.0"

[dependencies]
glob = "0.3.0"
anyhow = "1.0.57"
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"
serde_json = "1.0.81"
log = "0.4.17"
clap = { version = "3.1.17", features = ["derive"] }
rmp-serde = "1.1.0"
femme = "2.2.1"
itertools = "0.10.3"
strum = { version = "0.24.0", features = ["derive"] }
retrieve = "1.1.1"
path-clean = "0.1.0"
write-to-file = "1.0.2"
